Fully Basic functionality. No readMe

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                                     <div class="form-group row">
                                         <label for="first-train" class="col-sm-2 col-form-label col-form-label-sm">First Train Time-Military:</label>
                                         <div class="col-sm-10">
-                                            <input type="text" class="form-control form-control-sm" id="first-train" placeholder="HH:mm">
+                                            <input type="text" class="form-control form-control-sm" id="first-train" placeholder="hh:mm">
                                         </div>
                                     </div>
                                     <div class="form-group row">
