--- a/index.html
+++ b/index.html
@@ -72,6 +72,43 @@
 
                     <div class="tab-pane fade" id="nav-edit" role="tabpanel" aria-labelledby="nav-edit-tab">
                         <div class="card">
+                            <h5 class="card-header">Add Train Itinerary</h5>
+                            <div class="card-body">
+                                <form>
+                                    <div class="form-group row">
+                                        <label for="train-name" class="col-sm-2 col-form-label col-form-label-sm">Train Name:</label>
+                                        <div class="col-sm-10">
+                                            <input type="text" required class="form-control form-control-sm" id="train-name" >
+                                        </div>
+                                    </div>
+                                    <div class="form-group row">
+                                        <label for="destination" class="col-sm-2 col-form-label col-form-label-sm">Destination:</label>
+                                        <div class="col-sm-10">
+                                            <input type="text" required class="form-control form-control-sm" id="destination" >
+                                        </div>
+                                    </div>
+                                    <div class="form-group row">
+                                        <label for="first-trainhr" class="col-sm-2 col-form-label col-form-label-sm">First Train Time-Military:</label>
+                                        <div class="col-sm-10 form-inline">
+                                            <input type="number"required class="form-control form-control-sm" id="first-trainhr" placeholder="hh" min="0" max="23" > :
+                                            <input type="number"required class="form-control form-control-sm" id="first-trainmin" placeholder="mm" min="0" max="59">
+                                        </div>
+                                    </div>
+                                    <div class="form-group row">
+                                        <label for="frequency" class="col-sm-2 col-form-label col-form-label-sm">Frequency (mins):</label>
+                                        <div class="col-sm-10">
+                                            <input type="number" required class="form-control form-control-sm" id="frequency" >
+                                        </div>
+                                    </div>
+                                    <button type="submit" class="btn btn-primary" id="submit-button">Submit</button>
+
+                                </form>
+                            </div>
+                        </div>
+
+                        <br>
+
+                        <div class="card">
                             <h5 class="card-header">Edit / Delete Train Itinerary</h5>
                             <div class="card-body">
                                 <table class="table table-striped table-sm">
@@ -87,53 +124,11 @@
                                         </tr>
                                     </thead>
                                     <tbody id="train-info-del">
-                                        <!-- <tr class="d-flex">
-                                            <td class="col-2">Lauderdale Express</td>
-                                            <td class="col-2">Ft. Lauderdale</td>
-                                            <td class="col-2 text-center">30</td>
-                                            <td class="col-2 text-center">15:00</td>
-                                            <td class="col-2 text-center">25</td>
-                                            <td class="col-1 text-center"><i class="fa fa-pencil" aria-hidden="true"></i></td>
-                                            <td class="col-1 text-center"><i class="fa fa-trash" aria-hidden="true"></i></td>
-                                        </tr> -->
+                                        
                                     </tbody>
                                 </table>
                             </div>
-                        </div> 
-                        <br>
-                        <div class="card">
-                            <h5 class="card-header">Add Train Itinerary</h5>
-                            <div class="card-body">
-                                <form>
-                                    <div class="form-group row">
-                                        <label for="train-name" class="col-sm-2 col-form-label col-form-label-sm">Train Name:</label>
-                                        <div class="col-sm-10">
-                                            <input type="text" class="form-control form-control-sm" id="train-name">
-                                        </div>
-                                    </div>
-                                    <div class="form-group row">
-                                        <label for="destination" class="col-sm-2 col-form-label col-form-label-sm">Destination:</label>
-                                        <div class="col-sm-10">
-                                            <input type="text" class="form-control form-control-sm" id="destination">
-                                        </div>
-                                    </div>
-                                    <div class="form-group row">
-                                        <label for="first-train" class="col-sm-2 col-form-label col-form-label-sm">First Train Time-Military:</label>
-                                        <div class="col-sm-10">
-                                            <input type="text" class="form-control form-control-sm" id="first-train" placeholder="hh:mm">
-                                        </div>
-                                    </div>
-                                    <div class="form-group row">
-                                        <label for="frequency" class="col-sm-2 col-form-label col-form-label-sm">Frequency (mins):</label>
-                                        <div class="col-sm-10">
-                                            <input type="number" class="form-control form-control-sm" id="frequency">
-                                        </div>
-                                    </div>
-                                    <button type="submit" class="btn btn-primary" id="submit-button">Submit</button>
-
-                                </form>
-                            </div>
-                        </div>                       
+                        </div>                                                
                     </div>
                 </div>
             </div>
