--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                                     <div class="form-group row">
                                         <label for="train-name" class="col-sm-2 col-form-label col-form-label-sm">Train Name:</label>
                                         <div class="col-sm-10">
-                                            <input type="text" required class="form-control form-control-sm" id="train-name" >
+                                            <input type="text" required class="form-control form-control-sm" id="train-name">
                                         </div>
                                     </div>
                                     <div class="form-group row">
@@ -97,7 +97,7 @@
                                     <div class="form-group row">
                                         <label for="frequency" class="col-sm-2 col-form-label col-form-label-sm">Frequency (mins):</label>
                                         <div class="col-sm-10">
-                                            <input type="number" required class="form-control form-control-sm" id="frequency" >
+                                            <input type="number" required class="form-control form-control-sm" id="frequency" min="1" >
                                         </div>
                                     </div>
                                     <button type="submit" class="btn btn-primary" id="submit-button">Submit</button>
